fix(ooui): 🐛 z-index of .oo-ui-window-frame

--- a/skinStyles/ooui/oojs-ui-windows.less
+++ b/skinStyles/ooui/oojs-ui-windows.less
@@ -65,6 +65,7 @@ body > .oo-ui-windowManager {
 
 .oo-ui-windowManager-modal > .oo-ui-dialog > .oo-ui-window-frame {
 	background-color: var( --color-surface-1 );
+	z-index: @z-index-overlay + 1;
 }
 
 .oo-ui-windowManager-modal:not( .oo-ui-windowManager-size-full ) > .oo-ui-dialog > .oo-ui-window-frame {
